# bachelor-thesis

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: backend.yaml
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 2024042222__a7a2e175b593.py  2024042250__c4cac1c8dce9.py  2024042500__f95181ea1f96.py  e6fdaf437316_.py
backend/envs/: .env.example
backend/src/: database.py  deps.py  download.py  load.py  main.py  ml.py  settings.py  translation.py
backend/src/apis/: auth_api.py  entry_api.py  health_api.py  inference_api.py  payment_api.py  user_api.py
backend/src/apis/utils/: utils.py
backend/src/auth/: auth_bearer.py  jwt_handler.py  utils.py
backend/src/models/: __init__.py  entry.py  mixin.py  user.py
backend/src/repositories/: abstract_repo.py  entry_repo.py  sqlalchemy_repo.py  user_repo.py
backend/src/schemas/: auth_schema.py  entry_schema.py  errors_schema.py  inference_schema.py  jwt_schema.py  payment_schema.py  user_schema.py
backend/src/services/: abstract_srv.py  entry_srv.py  errors.py  health_srv.py  inference_srv.py  preprocess_srv.py  user_srv.py
backend/src/tests/integration_tests/: conftest.py  test_auth.py  test_entry.py  test_health.py  test_inference.py  test_user.py
backend/src/tests/integration_tests/utils/: asserts.py  data_generation_tools.py  entity_instance.py  payloads.py
backend/src/tests/unit_tests/: conftest.py
backend/src/tests/unit_tests/test_repositories/: test_entry_repository.py  test_sqlalchemy_repository.py  test_user_repository.py
backend/src/tests/unit_tests/test_services/: test_entry_service.py  test_health_service.py  test_inference_service.py  test_user_service.py
core/: .gitignore  README.md  pyproject.toml
core/json/: json.json
core/src/: analysis.ipynb  autopredictor.ipynb  bert.ipynb  bert_fine_tuning.ipynb  clean_csv.ipynb  cluster.ipynb  constants.py  embeddings.ipynb  fastvit.ipynb  finetune_bert.ipynb  finetune_bert_old.ipynb  finetune_fastvit.ipynb  finetune_fastvit_old.ipynb  format.ipynb  format_csv.ipynb  format_v2.ipynb  inference_utils.py  lazypredict.ipynb  mlp.ipynb  multimodal.ipynb  multimodal_no_encoder.ipynb  multimodal_no_precompute.ipynb  multimodal_no_precompute_old.ipynb  multimodal_old.ipynb  multimodal_v1.ipynb  multimodal_v2.ipynb  multimodal_with_encoder.ipynb  precompute_embeddings.ipynb  simple_nn.ipynb  simple_nn_classifier.ipynb  split.ipynb  text_analysis.ipynb  visualize_data.ipynb
core/src/analysis/: trying.py
core/src/archive/: finetune_bert_mlm.ipynb  finetune_bert_reg_v2.ipynb  multimodal_no_precompute.ipynb  multimodal_with_encoder.ipynb
core/src/samples/: bert.ipynb  fastvit.ipynb
core/src/utils/: decorators.py  dirs.py  discord.py  extract_00_images.py  format.py  metrics.py  plots.py  remove_resized_images.py  resize_images.py
docs/diagrams/: arch.drawio  architectures.drawio  backend-modules.drawio  repositories.drawio  services.drawio
docs/overleaf/: 0-abstract.tex  0-title.tex  1-introduction.tex  2-relatedwork.tex  3-dataset.tex  4-model.tex  5-webapp.tex  6-conclusions.tex  bibliography.bib  main.tex
docs/slides/: main.tex
frontend/rocar-price-prediction/: .env.example  .eslintrc.json  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/rocar-price-prediction/src/: config.global.ts  constants.ts
frontend/rocar-price-prediction/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/rocar-price-prediction/src/app/auth/: layout.tsx
frontend/rocar-price-prediction/src/app/auth/login/: page.tsx
frontend/rocar-price-prediction/src/app/auth/register/: page.tsx
frontend/rocar-price-prediction/src/app/dashboard/: layout.tsx  page.tsx
frontend/rocar-price-prediction/src/app/dashboard/new-prediction/: page.tsx
frontend/rocar-price-prediction/src/app/pricing/: page.tsx
frontend/rocar-price-prediction/src/app/providers/: global-providers.tsx
frontend/rocar-price-prediction/src/auth/: session.ts
frontend/rocar-price-prediction/src/auth/context/: app-first-logic.tsx  auth.tsx
frontend/rocar-price-prediction/src/auth/guard/: auth-guard.tsx  guest-guard.tsx  index.tsx
frontend/rocar-price-prediction/src/components/: BuyButton.tsx  buy-button.tsx  chip.tsx  dashboard-header.tsx  extra-options.tsx  inference-form.tsx  predictions-history.tsx  remaining-predictions-card.tsx
frontend/rocar-price-prediction/src/components/auth/: auth-form.tsx  logout-button.tsx
frontend/rocar-price-prediction/src/components/forms/: FormProvider.tsx  RHFInput.tsx  RHFSelect.tsx  RHFSlider.tsx  RHFSubmitButton.tsx  RHFSwitch.tsx  RHFTextArea.tsx
frontend/rocar-price-prediction/src/components/navbar/: mobile-nav.tsx  navbar.tsx  user-account-nav.tsx
frontend/rocar-price-prediction/src/components/ui/: bento-grid.tsx  dropzone.tsx  input.tsx  multi-step-loader.tsx  select.tsx  textarea.tsx  tracing-beam.tsx
frontend/rocar-price-prediction/src/hooks/: auth.ts  entry.ts  file-upload.ts  inference.ts  payment.ts  user.ts
frontend/rocar-price-prediction/src/requests/: auth.ts  entry.ts  file.ts  inference.ts  payment.ts  user.ts
frontend/rocar-price-prediction/src/types/: entry.types.ts  user.types.ts
frontend/rocar-price-prediction/src/utils/: axios.ts  stripe.ts
scraper/: pyproject.toml
scraper/src/: check_images.py  clean_csv.py  constants.py  download_images.py  extract_ads.py  extractor.py  final_check.py  merge_data.py  run.py  scrape_ads.py
scraper/src/utils/: decorators.py  search.py
