[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["hutanmihai <hutanmihai29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"


[tool.poetry.group.dev.dependencies]
black = "24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
